--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <title>mariogago</title>
   <link rel="shortcut icon" href="/beta4.ico" type="image/x-icon">
   <link rel="icon" href="/beta4.ico" type="image/x-icon">
-  
+
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 </head>
 
 <body>
@@ -19,14 +20,14 @@
     <div id="index-banner" class="parallax-container main">
       <div class="section no-pad-bot">
         <div class="container">
-          <h3 class="header center red-text accent-3 mt-30">It's me, Mário!</h3>
+          <h3 class="header center red-text darken-2 mt-30">It's me, Mário!</h3>
 
           <div class="row center mt-30">
             <img class="circle contact-photo" src="beta4.png" data-anim-src="beta4-anim.png">
           </div>
 
           <div class="row center">
-            <h5 id="subtext" class="header red-text light">I'm - almost - a Software Engineer and I'll do AWSome sh**</h5>
+            <h5 id="subtext" class="header red-text darken-4">I'm - almost - a Software Engineer and I'll do AWSome sh**</h5>
           </div>
 
           <div class="row center">
@@ -59,7 +60,7 @@
     </div>
   </main>
 
-  <div class="footer-copyright cyan accent-2">
+  <div class="footer-copyright cyan accent-3">
     <div class="container grey-text text-lighten-4 small-padding center">
     Copyright © 2017 Mário Gago
     </div>
@@ -78,9 +79,9 @@
         },
         function() {
           $(this).attr("src", $(this).data("src"));
-        }                         
+        }
       );
-  }); 
+  });
   </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
