remove footer text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <main>
+  <main class="mb-50">
     <div id="index-banner" class="parallax-container main">
       <div class="section no-pad-bot">
         <div class="container">
@@ -27,14 +27,14 @@
           </div>
 
           <div class="row center">
-            <h5 id="subtext" class="header red-text darken-4">I'm - almost - a Software Engineer and I'll do AWSome sh**</h5>
+            <h5 id="subtext" class="header red-text darken-4"></h5>
           </div>
 
           <div class="row center">
             <h5 class="header light"></h5>
           </div>
 
-          <div class="container-block valign-wrapper center-align">
+          <div class="container-block valign-wrapper center-align mb-50">
             <a class="connect" target="_blank" href="https://github.com/mgago">
               <i class="fa fa-github social-icon mr-15"></i>
             </a>
